# OpenZCine

./: .editorconfig  .editorconfig-checker.json  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .mcp.json  .swift-format  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  Package.resolved  Package.swift  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  _typos.toml  justfile
.claude/: settings.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  plane-sync.json
Apps/Android/app/src/main/cpp/live_feed_vk/: CMakeLists.txt  live_feed_vk_jni.cpp  live_feed_vk_renderer.cpp  live_feed_vk_renderer.h
Apps/Android/app/src/main/cpp/live_feed_vk/shaders/: feed.frag  feed.vert
docs/: ARCHITECTURE.md  PRD.md  PROJECT-MANAGEMENT.md  ROADMAP.md  android-control-writes.md  android-distribution.md  commit-hygiene.md  connection-reliability-audit.md  frameio-setup.md  live-audio-monitoring.md  nikon-mtp.md  nikon-sdk.md  performance-audit.md  red-log3g10-reference.md  testflight-ci.md
feedback/: feedback 2.json  feedback.json
ios/: .gitignore  ExportOptions-CI.plist  ExportOptions.plist
scripts/: add-core-file-to-xcode.rb  add-shell-file-to-xcode.rb  add-spm-dependency.rb  android-bridge-smoke.sh  android-play-release-guard.sh  android-play-release-notes-check.sh  android-stage-swift-core.sh  check-repository-hygiene.sh  check-site.sh  flows-dash.mjs  flows-excalidash-sync.mjs  ios-ci-version.sh  ios-create-watch-profile.rb  ios-install-asc-api-key.sh  (+11 more)
(+767 files in other folders)
